# retsyn

./: CHANGELOG.md  Cargo.toml  README.md  shell.nix
design/: CODING-GUIDELINES.md  Rust-Crates.md  Search-Architecture.md  Search-Categories.md  basic-features.md  search-interface.md
src/: cli.rs  config.rs  fulltext_index.rs  lib.rs  main.rs  retsyn_app.rs  search_result.rs
src/collectors/: aichat_session_files.rs  markdown_files.rs  mod.rs  web_scrapbook_files.rs
src/index_entry/: index_entry.rs  mod.rs
src/invocations/: invocation.rs  invocation_list.rs  mod.rs
src/messages/: index_request.rs  index_results.rs  mod.rs
src/model/: fulltext_index.rs  index_entry.rs  mod.rs  search_result.rs
src/ui/: config_screen.rs  help_screen.rs  main_ui.rs  mod.rs  navigation_and_key_events.rs  recent_queries.rs  retsyn_app.rs  search_results.rs
