[package]
name = "retsyn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "retsyn"
path = "src/main.rs"

[dependencies]
confique = { version = "0.3.1", features = ["toml"] }
directories = "6.0.0"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui = "0.32"
ignore = "0.4.23"
shellexpand = "3.1.1"
tantivy = "0.25.0"
time = { version = "0.3.44", features = ["parsing", "formatting", "local-offset"] }
