[package]
name = "retsyn"
version = "0.1.4"
edition = "2024"
license = "BSD-3-Clause"                                                         # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A full text search program. Can be used via CLI or as a library."
repository = "https://github.com/symplasma/retsyn"
readme = "README.md"
keywords = ["tantivy", "search", "find", "open", "filter"]                       # free text
categories = ["command-line-utilities"]                                          # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "retsyn"
path = "src/lib.rs"

[[bin]]
name = "retsyn"
path = "src/main.rs"

[dependencies]
atomicwrites = "0.4.4"
clap = { version = "4.5", features = ["derive"] }
confique = { version = "0.3.1", features = ["toml"] }
directories = "6.0.0"
dom_query = "0.23.1"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui = "0.33"
egui_commonmark = { version = "0.22.0", features = ["better_syntax_highlighting", "svg"] }
ignore = "0.4.24"
open = "5.3.2"
readability-rust = "0.1.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tantivy = "0.25.0"
time = { version = "0.3.44", features = [
    "parsing",
    "formatting",
    "local-offset",
] }
